[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
# FileSystem
vfscore = { path = "../kernel/vfscore" }
ramfs = { path = "../kernel/ramfs" }
fatfs = { path = "../kernel/fatfs" }

task = { path = "../kernel/task" }
macros = { path = "../kernel/header/macros" }

linkme = { path = "../dependency/linkme", features = ["used_linker"] }
test_tasks = { path = "../test_tasks" }

header = { path = "../kernel/header" }