[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]

kalloc = { path = "../kernel/kalloc" }

# FileSystem
# vfscore = { path = "../kernel/vfscore" }
# ramfs = { path = "../kernel/ramfs" }
# fatfs = { path = "../kernel/fatfs", features = ['no_std'] }

header = { path = "../kernel/header" }


dtb-walker = "0.1"