[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
console_sbi = ["console/console_sbi"]
console_uart = ["console/console_uart"]

default = ["console_uart"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]

sbi = { path = "../kernel/sbi" }
console = { path = "../kernel/console", default-features = false }

kalloc = { path = "../kernel/kalloc" }

# FileSystem
# vfscore = { path = "../kernel/vfscore" }
# ramfs = { path = "../kernel/ramfs" }
# fatfs = { path = "../kernel/fatfs", features = ['no_std'] }

header = { path = "../kernel/header" }

uart = { path = "../kernel/uart" }
ns16550 = { path = "../kernel/uart-impl/ns16550" }

dtb-walker = "0.1"

blk-device = { path = "../kernel/blk-device" }
dev = { path = "../kernel/dev" }