[package]
name = "test_entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfscore = { path = "../kernel/vfscore" }
ramfs = { path = "../kernel/ramfs" }
fatfs = { path = "../kernel/fatfs" }
task = { path = "../kernel/task" }
macros = { path = "../kernel/header/macros" }

linkme = { path = "../dependency/linkme" }
test_tasks = { path = "../test_tasks" }