[package]
name = "test_tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
task = { path = "../kernel/task" }
linkme = { version = "0.3", features = ["used_linker"] }
# header = { path = "../kernel/header"}