[package]
name = "console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
console_sbi = []
console_uart = []

[dependencies]
sbi = { path = "../sbi" }
ns16550 = { path = "../uart-impl/ns16550" }
uart = { path = "../uart" }
header = { path = "../header" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

spin = { version = "0.9.4", features = ["lazy"] }