[package]
name = "dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
header = { path = "../header" }
dtb-walker = "0.1"
fdt = "0.1.4"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
console = { path = "../console" }

spin = { version = "0.9.4", features = ["lazy", "once"] }
