[package]
name = "fatfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no_std = []

[dependencies]
vfscore = { path = "../vfscore" }
header = { path = "../header" }

fatfs = { git = "https://github.com/rafalh/rust-fatfs.git", default-features = false, features = ['alloc'] }
dev = { path = "../dev" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
console = { path = "../console" }