[package]
name = "header"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = { version = "0.3", features = ["used_linker"] }
macros = { path = "macros" }
spin = { version = "0.9.4", features = ["once"] }

fdt = "0.1.4"