[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
lazy_static = "1.4.0"
quote = "1.0"
syn = { version = "*", features = ["full"]}

linkme = "0.3"